added more pages including music description

--- a/index.html
+++ b/index.html
@@ -18,20 +18,23 @@
     </ul>
   </div>
   <div class = "page" id = "first_page">
-    <h1 id="introduction"> Welcome </h1>
-    <h2> How are you feeling?</h2>
+    <h1>Spread happiness.</h1>
   </div>
-  <div class = "page"><br>
-    <p class = "quote"> "According to psychological research, seeing pictures of cute pictures can combat stress
-      and make us happier"</p><br>
-    <p class = "source">the Independent </p>
+  <div class = "page">
+    <p class = "quote">"According to psychological research, seeing pictures of cute pictures can combat stress
+      and make us happier."</p><br>
+      <a href="http://www.independent.co.uk/life-style/health-and-families/features/why-cute-photos-of-animals-make-us-happier-10332916.html"
+      class = "source">The Independent </p>
+    <!--http://www.independent.co.uk/life-style/health-and-families/features/why-cute-photos-of-animals-make-us-happier-10332916.html -->
   </div>
-<div> --> INSERT PICTURES HERE </div>
-
-
-
-
-
+  <div class = "page" id = "animals"> ANIMAL PICS <!-- INSERT PICTURES HERE -->
+  </div>
+  <div class = "page">
+    <p class= "quote">"Studies show that listening to music can physiologically ease stress
+      and even reduce depressive symptoms." </p><br>
+      <a href="http://www.huffingtonpost.ca/entry/benefits-of-music_us_58122175e4b0390e69ce84a5"
+      class = "source">The Huffington Post </p>
 
 
 </body>
+</html>
