Added more pages

--- a/index.html
+++ b/index.html
@@ -24,17 +24,29 @@
     <p class = "quote">"According to psychological research, seeing pictures of cute pictures can combat stress
       and make us happier."</p><br>
       <a href="http://www.independent.co.uk/life-style/health-and-families/features/why-cute-photos-of-animals-make-us-happier-10332916.html"
-      class = "source">The Independent </p>
+      class = "source">The Independent</a>
     <!--http://www.independent.co.uk/life-style/health-and-families/features/why-cute-photos-of-animals-make-us-happier-10332916.html -->
   </div>
   <div class = "page" id = "animals"> ANIMAL PICS <!-- INSERT PICTURES HERE -->
   </div>
   <div class = "page">
     <p class= "quote">"Studies show that listening to music can physiologically ease stress
-      and even reduce depressive symptoms." </p><br>
+      and even reduce depressive symptoms."</p><br>
       <a href="http://www.huffingtonpost.ca/entry/benefits-of-music_us_58122175e4b0390e69ce84a5"
-      class = "source">The Huffington Post </p>
+      class = "source">The Huffington Post</a>
+  </div>
+  <div class = "page" id = "music"> MUSIC
+  </div>
+  <div class = "page">
+    <p class = "quote">"Deep breathing is one of the best ways to lower stress in the body.
+    This is because when you breathe deeply, it sends a message to your brain to calm down and relax."</p><br>
+    <a href="https://www.webmd.com/balance/stress-management/stress-management-breathing-exercises-for-relaxation"
+    class = "source">WebMD</a>
+  </div>
 
 
-</body>
-</html>
+
+
+
+  </body>
+  </html>
