Finished pages up to breathing

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <a href="https://www.webmd.com/balance/stress-management/stress-management-breathing-exercises-for-relaxation"
     class = "source">WebMD</a>
   </div>
-
-
+  <div class = "page" id = "breathing"> BREATHING
+  </div>
 
 
 
