Added a final quote page

--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
   </div>
   <div class = "page" id = "breathing"> BREATHING
   </div>
-
-
+  <div class = "page" id = "final">
+    <p class = "quote">"INSERT FINAL HEART-MOVING QUOTE"</p><br>
+  </div>
 
   </body>
   </html>
