--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.6/jquery.fullpage.js"></script>
   <script type="text/javascript">
     $(document).ready(function() {
-      $('#fullpage').fullpage();
+      $('#fullpage').fullpage({
+        sectionsColor: ['#d3dfef', '#1a9fa4', '#d3dfef', '#1b2e3c', '#d3dfef', '#1a9fa4', '#d3dfef', '#1a9fa4'],
+        anchors: ['first', 'second', 'third', 'fourth', 'fifth', 'sixth', 'seventh', 'eighth'],
+        scrollBar: false,
+        loopBottom: true,
+        scrollingSpeed: 500
+      });
     });
   </script>
 </head>
@@ -22,11 +28,10 @@
 <body>
   <div class = "navigation bars">
     <ul>
-      <li><a href="#introduction">Go to top</a></li>
-      <li><a href="#animals">Animals</a></li>
-      <li><a href="#music">Music</a></li>
-      <li><a href="#breathing">Breathing</a></li>
-      <li><a href="#meditation">Meditation</a></li>
+      <li><a href="#first">Go to top</a></li>
+      <li><a href="#third">Animals</a></li>
+      <li><a href="#fifth">Music</a></li>
+      <li><a href="#seventh">Breathing</a></li>
     </ul>
   </div>
   <div id="fullpage">
