--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
   <script type="text/javascript">
     $(document).ready(function() {
       $('#fullpage').fullpage({
-        sectionsColor: ['#d3dfef', '#1a9fa4', '#d3dfef', '#1b2e3c', '#d3dfef', '#1a9fa4', '#d3dfef', '#1a9fa4'],
+        sectionsColor: ['#ffffff', '#1a9fa4', '#ffffff', '#1b2e3c', '#ffffff', '#1a9fa4', '#ffffff', '#1a9fa4'],
         anchors: ['first', 'second', 'third', 'fourth', 'fifth', 'sixth', 'seventh', 'eighth'],
         navigation: false,
         navigationPosition:'right',
         scrollBar: false,
         loopBottom: true,
         scrollingSpeed: 700,
-        touchSensitivity: 5
+        touchSensitivity: 5,
+        parallax: true
       });
     });
   </script>
