--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Mental Health</title>
+  <title>iNeedPositivity.com</title>
   <meta name = "description" content = "Spread happiness." />
   <meta name = "keywords" content="happiness, sad, cute, animal, pictures, breathing, inspiring, quotes" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
