More button stuff

--- a/index.html
+++ b/index.html
@@ -88,12 +88,11 @@
     <div class="intro">
     <div class = "page" style="text-align:center;">
       <p id = "breathing_exercise">4-7-8 breathing exercise</pr><br>
-        <p id = "para"> Select the number of times you would like to perform the exercise,<br>then press Start to begin.</p>
-    	<button type ="button" id="b1", onclick="which1()">1</button>
-    	<button type ="button" id="b2", onclick="which2()">2</button>
-    	<button type ="button" id="b3", onclick="which3()">3</button>
-    	<script src="main.js">
-    	</script>
+        <p id = "para"> Select the number of times you would like to perform the exercise.</p>
+        <button type ="button" id="b1", onclick="which1()">1</button>
+    	   <button type ="button" id="b2", onclick="which2()">2</button>
+    	    <button type ="button" id="b3", onclick="which3()">3</button>
+          <script src="main.js"></script>
     </div>
   </div>
 </div>
