changed padding and formatting and stuff

--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
         <source src="images/test.ogg" type="audio/ogg">
       </audio>
       <div class="page">
-        <h1>Happy Music :)</h1>
       </div>
     </div>
     <div class="section" id="section5">
@@ -108,6 +107,7 @@
   <div class="section" id="section6">
     <div class="intro">
     <div class = "page" id = "breathing" style="text-align:center;">
+      <p id = "breathing_exercise"> This is the 4-7-8 breathing exercise </p><br>
       <p id = "para"> Select the number of times you would like to perform the exercise.</p>
         <button type ="button" id="b1", onclick="which1()">1</button>
     	   <button type ="button" id="b2", onclick="which2()">2</button>
